# PersonnelApi_Logs_Documentation/src/routes/auth.router.js
@@ -12,7 +12,8 @@ const auth = require('../controllers/auth.controller')
 // URL: /auth
 
 router.post('/login', auth.login)
-router.all('/logout', auth.logout)
+//router.all('/logout', auth.logout)  // swaggerAutogen all() ve use() metodunlarini yakalamaz
+router.get('/logout', auth.logout)  // swaggerAutogen all() metodunu yakalamaz
 
 /* ------------------------------------------------------- */
 module.exports = router
